--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,4 +1,3 @@
-
 <!-- ===================== HEADER LOGO ===================== -->
 <div class="header-logo">
     <div class="bg-light-color bg-logo">
@@ -18,30 +17,30 @@
         <a href="index.html?menu=beranda">
             <nav id="beranda" class="beranda">
                 Beranda
-            </nav>                
+            </nav>
         </a>
-        <a href="materi.html?menu=materi">
+        <a href="mata-kuliah.html?menu=materi">
             <nav id="materi">
                 Materi
-            </nav>                
+            </nav>
         </a>
         <a href="kuis.html?menu=kuis">
             <nav id="kuis">
                 Kuis
-            </nav>  
+            </nav>
         </a>
 
-        <a href="tentang-kami.html?menu=tentang-kami">          
+        <a href="tentang-kami.html?menu=tentang-kami">
             <nav id="tentang-kami">
                 Tentang Kami
-            </nav> 
+            </nav>
         </a>
     </div>
-    
+
     <div class="button-jelajah">
         <a href="" class="button-light-bg text-nodecoration text-bold">Mulai Jelajah</a>
     </div>
-                  
+
 </div>
 <!-- ===================== END HEADER MAIN ===================== -->
 <!-- ===================== HEADER SUB MAIN ===================== -->
@@ -53,16 +52,18 @@
             <a href="mata-kuliah.html?">Struktur Data</a>
         </nav>
         <nav>
-            <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-stack">Dasar Pemrograman Web</a>
+            <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-stack">Dasar
+                Pemrograman Web</a>
         </nav>
         <nav>
-            <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-queue">Algoritma Pemrograman Dasar</a>
+            <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-queue">Algoritma
+                Pemrograman Dasar</a>
         </nav>
         <nav>
             <a href="">Metode Statistik</a>
         </nav>
     </div>
-    
+
 </div>
 <!-- ===================== END HEADER SUB MAIN ===================== -->
 <script type="text/javascript" src="../assets/script/script.js"></script>
