Menambahkan konten tentang kami, kuis, beranda dan menambahkan icon title di halaman

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -5,10 +5,10 @@
         </a>
     </div>
     <div class="footer-menu text-light-color text-nodecoration">
-        <a href="index.html">Beranda</a>
-        <a href="index.html">Materi</a>
-        <a href="index.html">Kuis</a>
-        <a href="index.html">Tentang Kami</a>
+        <a href="index.html?menu=beranda">Beranda</a>
+        <a href="mata-kuliah.html?menu=materi">Materi</a>
+        <a href="kuis.html?menu=kuis">Kuis</a>
+        <a href="tentang-kami.html?menu=tentang-kami">Tentang Kami</a>
     </div>
     <div class="footer-copyright text-light-color">
         <p>© RAYBIZTHOR, 2022.</p>
