--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -49,21 +49,17 @@
     </div>
     <div class="navigation-sub-menu">
         <nav>
-            <a href="mata-kuliah.html?">Struktur Data</a>
+            <a href="mata-kuliah.html?menu=materi&mata-kuliah=struktur-data">Struktur Data</a>
         </nav>
         <nav>
-            <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-stack">Dasar
+            <a href="mata-kuliah.html?menu=materi&mata-kuliah=dasa-pemrograman-web">Dasar
                 Pemrograman Web</a>
         </nav>
         <nav>
-            <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-queue">Algoritma
+            <a href="mata-kuliah.html?menu=materi&mata-kuliah=algoritma-dasar">Algoritma
                 Pemrograman Dasar</a>
-        </nav>
-        <nav>
-            <a href="">Metode Statistik</a>
         </nav>
     </div>
 
 </div>
 <!-- ===================== END HEADER SUB MAIN ===================== -->
-<script type="text/javascript" src="../assets/script/script.js"></script>
