--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,40 +1,44 @@
-.content-headline
-{
-    display:flex;
+.content-headline {
+    display: flex;
     justify-content: space-around;
     align-items: center;
-    padding:3rem 2rem;
+    padding: 3rem 2rem;
 }
-.content-description
-{
+
+.content-material {
+    display: flex;
+    justify-content: center;
+}
+
+.content-description {
     padding: 0 2rem;
+    max-width: 40%;
 }
-.headline-title
-{
-    font-size:2.25rem;
+
+.headline-title {
+    font-size: 2.25rem;
 }
-.headline-button
-{
+
+.headline-button {
     display: block;
-    margin-top:3rem;
+    margin-top: 3rem;
 }
-.headline-description
-{
+
+.headline-description {
     margin-top: 0.875rem;
-    font-size:0.875rem;
+    font-size: 0.875rem;
 }
 
 
 
 
 @media screen and (max-width:820px) {
-    .content-headline
-    {
+    .content-headline {
         flex-direction: column;
         text-align: center;
     }
-    .content-material
-    {
-        margin-top:2rem;
+
+    .content-material {
+        margin-top: 2rem;
     }
 }
