--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="button-jelajah">
-        <a href="" class="button-light-bg text-nodecoration text-bold">Mulai Jelajah</a>
+        <a href="mata-kuliah.html?menu=materi" class="button-light-bg text-nodecoration text-bold">Mulai Jelajah</a>
     </div>
 
 </div>
@@ -49,14 +49,14 @@
     </div>
     <div class="navigation-sub-menu">
         <nav>
-            <a href="mata-kuliah.html?menu=materi&mata-kuliah=struktur-data">Struktur Data</a>
+            <a href="materi.html?menu=materi&mata-kuliah=struktur-data">Struktur Data</a>
         </nav>
         <nav>
-            <a href="mata-kuliah.html?menu=materi&mata-kuliah=dasa-pemrograman-web">Dasar
+            <a href="materi.html?menu=materi&mata-kuliah=dasa-pemrograman-web">Dasar
                 Pemrograman Web</a>
         </nav>
         <nav>
-            <a href="mata-kuliah.html?menu=materi&mata-kuliah=algoritma-dasar">Algoritma
+            <a href="materi.html?menu=materi&mata-kuliah=algoritma-dasar">Algoritma
                 Pemrograman Dasar</a>
         </nav>
     </div>
