Menambahkan icon menu dan x-mark pada mobile screen resolution, memperbaiki tampilan mobile untuk halaman tentang kami, dan memperbaiki header pada tampilan mobile

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,65 +1,114 @@
-<!-- ===================== HEADER LOGO ===================== -->
-<div class="header-logo">
-    <div class="bg-light-color bg-logo">
-        <img src="../assets/images/logo.svg" alt="Logo">
+<div class="header-container">
+
+    <!-- ===================== HEADER LOGO ===================== -->
+    <div class="header-logo">
+        <div class="bg-light-color bg-logo">
+            <img src="../assets/images/logo.svg" alt="Logo">
+        </div>
+    </div>
+    <!-- ===================== END HEADER LOGO ===================== -->
+
+
+    <!-- ===================== HEADER MAIN ===================== -->
+    <div class="header-main bg-gradient-color">
+
+        <div class="header-logo-main">
+            <img src="../assets/images/logo-white.svg" alt="Logo">
+        </div>
+        <div class="navigation-menu text-nodecoration">
+            <a href="index.html?menu=beranda">
+                <nav id="beranda" class="beranda">
+                    Beranda
+                </nav>
+            </a>
+            <a href="mata-kuliah.html?menu=materi">
+                <nav id="materi">
+                    Materi
+                </nav>
+            </a>
+            <a href="kuis.html?menu=kuis">
+                <nav id="kuis">
+                    Kuis
+                </nav>
+            </a>
+
+            <a href="tentang-kami.html?menu=tentang-kami">
+                <nav id="tentang-kami">
+                    Tentang Kami
+                </nav>
+            </a>
+        </div>
+
+        <div class="button-jelajah">
+            <a href="mata-kuliah.html?menu=materi" class="button-light-bg text-nodecoration text-bold">Mulai Jelajah</a>
+        </div>
+        <div id="menu-icon" class="menu-icon">
+            <img src="../assets/images/menu-icon.svg" alt="Menu">
+        </div>
+
+    </div>
+    <!-- ===================== END HEADER MAIN ===================== -->
+
+    <!-- ===================== HEADER SUB MAIN ===================== -->
+    <div class="header-sub-main bg-light-color text-nodecoration text-primary-color">
+        <div class="header-logo-main header-logo-sub-main">
+        </div>
+        <div class="navigation-sub-menu">
+            <nav>
+                <a href="materi.html?menu=materi&mata-kuliah=struktur-data">Struktur Data</a>
+            </nav>
+            <nav>
+                <a href="materi.html?menu=materi&mata-kuliah=dasa-pemrograman-web">Dasar
+                    Pemrograman Web</a>
+            </nav>
+            <nav>
+                <a href="materi.html?menu=materi&mata-kuliah=algoritma-dasar">Algoritma
+                    Pemrograman Dasar</a>
+            </nav>
+        </div>
+
+    </div>
+    <!-- ===================== END HEADER SUB MAIN ===================== -->
+
+
+</div>
+
+
+
+<!-- ===================== HEADER MENU -- MOBILE ===================== -->
+<div id="menu-mobile" class="menu-mobile hidden">
+    <div class="menu-mobile-container">
+        <div class="menu-mobile-heading">
+            <div class="header-logo-main">
+                <img src="../assets/images/logo-white.svg" alt="Logo">
+            </div>
+            <div id="x-icon" class="x-icon">
+                <img src="../assets/images/x-icon.svg" alt="Logo">
+            </div>
+        </div>
+        <div class="navigation-mobile text-nodecoration text-light-color">
+            <a href="index.html?menu=beranda">
+                <nav id="beranda" class="beranda">
+                    Beranda
+                </nav>
+            </a>
+            <a href="mata-kuliah.html?menu=materi">
+                <nav id="materi">
+                    Materi
+                </nav>
+            </a>
+            <a href="kuis.html?menu=kuis">
+                <nav id="kuis">
+                    Kuis
+                </nav>
+            </a>
+
+            <a href="tentang-kami.html?menu=tentang-kami">
+                <nav id="tentang-kami">
+                    Tentang Kami
+                </nav>
+            </a>
+        </div>
     </div>
 </div>
-<!-- ===================== END HEADER LOGO ===================== -->
-
-
-<!-- ===================== HEADER MAIN ===================== -->
-<div class="header-main bg-gradient-color">
-
-    <div class="header-logo-main">
-        <img src="../assets/images/logo-white.svg" alt="Logo">
-    </div>
-    <div class="navigation-menu text-nodecoration">
-        <a href="index.html?menu=beranda">
-            <nav id="beranda" class="beranda">
-                Beranda
-            </nav>
-        </a>
-        <a href="mata-kuliah.html?menu=materi">
-            <nav id="materi">
-                Materi
-            </nav>
-        </a>
-        <a href="kuis.html?menu=kuis">
-            <nav id="kuis">
-                Kuis
-            </nav>
-        </a>
-
-        <a href="tentang-kami.html?menu=tentang-kami">
-            <nav id="tentang-kami">
-                Tentang Kami
-            </nav>
-        </a>
-    </div>
-
-    <div class="button-jelajah">
-        <a href="mata-kuliah.html?menu=materi" class="button-light-bg text-nodecoration text-bold">Mulai Jelajah</a>
-    </div>
-
-</div>
-<!-- ===================== END HEADER MAIN ===================== -->
-<!-- ===================== HEADER SUB MAIN ===================== -->
-<div class="header-sub-main bg-light-color text-nodecoration text-primary-color">
-    <div class="header-logo-main header-logo-sub-main">
-    </div>
-    <div class="navigation-sub-menu">
-        <nav>
-            <a href="materi.html?menu=materi&mata-kuliah=struktur-data">Struktur Data</a>
-        </nav>
-        <nav>
-            <a href="materi.html?menu=materi&mata-kuliah=dasa-pemrograman-web">Dasar
-                Pemrograman Web</a>
-        </nav>
-        <nav>
-            <a href="materi.html?menu=materi&mata-kuliah=algoritma-dasar">Algoritma
-                Pemrograman Dasar</a>
-        </nav>
-    </div>
-
-</div>
-<!-- ===================== END HEADER SUB MAIN ===================== -->
+<!-- ===================== END HEADER MENU -- MOBILE ===================== -->
